Add plots for different distributions.
Binomial, chi-squared, normal, Poisson.
Show relationships between Z and t & the normal approximation for a binomial

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,3 +24,8 @@ Collate:
     'CSUSBWeather.R'
     'SSPlot.R'
     'BinomialDistribution.R'
+    'PoissonDist.R'
+    'ChisqDist.R'
+    'NormalDist.R'
+    'NormalApproximation.R'
+    'Z_and_t.R'
