--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,12 @@
+export(BinomialDist)
+export(ChisqDist)
 export(CSUSBWeather)
 export(DrawRegression)
 export(DrawSegment)
 export(EightBall)
 export(ExcelDateToRDate)
+export(NormalApproximation)
+export(NormalDist)
+export(PoissonDist)
+export(SSPlot)
+export(Z_and_t)
