--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(EightBall)
 export(ExcelDateToRDate)
 export(NormalApproximation)
 export(NormalDist)
+export(phyl.RMA.btest)
 export(PoissonDist)
 export(SSPlot)
 export(Z_and_t)
