Add expand.dft() from abd.
Update documentation with roxygen2.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(DrawRegression)
 export(DrawSegment)
 export(EightBall)
 export(ExcelDateToRDate)
+export(expand.dft)
 export(NormalApproximation)
 export(NormalDist)
 export(phyl.RMA.btest)
