--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ export(DrawRegression)
 export(DrawSegment)
 export(EightBall)
 export(ExcelDateToRDate)
-export(expand.dft)
 export(NormalApproximation)
 export(NormalDist)
-export(phyl.RMA.btest)
 export(PoissonDist)
 export(SSPlot)
 export(Z_and_t)
+export(expand.dft)
+export(phyl.RMA.btest)
+export(plot_mrb)
+export(scientific_10)
