Document pgls.RMA()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,11 @@ export(PoissonDist)
 export(SSPlot)
 export(Z_and_t)
 export(expand.dft)
+export(pgls.RMA)
 export(plot_mrb)
 export(scientific_10)
+import(caper)
+import(ggplot2)
+import(lattice)
+import(scales)
+import(tools)
