Fix export print method.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(Z_and_t)
 export(expand.dft)
 export(pgls.RMA)
 export(plot_mrb)
+export(print.pgls.RMA)
 export(scientific_10)
 import(caper)
 import(ggplot2)
