--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,9 @@ LazyData: yes
 Type: Package
 LazyLoad: yes
 Author: Kevin Middleton
-Description: My miscellaneous functions
+Description: My miscellaneous functions. Many are designed for
+  teaching statistics. Some are extensions to phylogenetic
+  comparative methods.
 Version: 0.1-6
 Date: 2015-08-13
 Depends:
