--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 # .travis.yml using container-based infrastructure
-# travis configuration file courtesy of Jan Tilly:
-# https://github.com/jtilly/R-travis-container-example
 
 # use c as catch-all language
 language: c
@@ -37,7 +35,7 @@ cache:
 # - install devtools if not already installed
 # - install covr if not already installed
 # - update all installed packages
-
+# - install package with dependencies
 install:
   - mkdir -p ~/Rlib
   - echo 'R_LIBS=~/Rlib' > .Renviron
@@ -46,8 +44,20 @@ install:
   - Rscript -e 'if(!"devtools" %in% rownames(installed.packages())) { install.packages("devtools", dependencies = TRUE) }'
   - Rscript -e 'if(!"covr" %in% rownames(installed.packages())) { install.packages("covr", dependencies = TRUE) }'
   - Rscript -e 'update.packages(ask = FALSE, instlib = "~/Rlib")'
+  - Rscript -e 'devtools::install_deps(pkg = ".", dependencies = TRUE)'
 
-
-# Lint
+# Build and check package
 script:
-  - ./travis-linter.sh
+  - R CMD build . --no-build-vignettes --no-manual
+  - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
+  - R CMD check "${PKG_FILE_NAME}" --no-build-vignettes --no-manual --as-cran
+
+# report coverage rate to coveralls
+after_success:
+  - Rscript -e 'covr::coveralls(exclusions = "src/RcppExports.cpp")'
+
+# send e-mails if stuff changes
+notifications:
+  email:
+    on_success: change
+    on_failure: change
