Fix print method not printing in pgls.RMA

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,8 @@ Type: Package
 LazyLoad: yes
 Author: Kevin Middleton
 Description: My miscellaneous functions. Many are designed for
-  teaching statistics. Some are extensions to phylogenetic
-  comparative methods.
+    teaching statistics. Some are extensions to phylogenetic
+    comparative methods.
 Version: 0.1-6
 Date: 2015-08-13
 Depends:
@@ -40,3 +40,4 @@ Collate:
     'expand.dft.R'
     'pgls.RMA.R'
     'plot_mrb.R'
+RoxygenNote: 5.0.1
