--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,11 +17,12 @@ export(expand.dft)
 export(pgls.RMA)
 export(plot_mrb)
 export(scientific_10)
-import(ape)
 import(ggplot2)
 import(lattice)
 import(scales)
 import(tools)
+importFrom(ape,compute.brlen)
+importFrom(ape,rtree)
 importFrom(caper,comparative.data)
 importFrom(caper,pgls)
 importFrom(graphics,abline)
