--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(DrawRegression)
 export(DrawSegment)
 export(EightBall)
 export(ExcelDateToRDate)
+export(HPDI_test)
 export(NormalApproximation)
 export(NormalDist)
 export(PoissonDist)
