--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(expand.dft)
 export(pgls.RMA)
 export(plot_mrb)
 export(scientific_10)
+export(unpack_map2stan)
 import(ggplot2)
 import(lattice)
 import(scales)
@@ -38,6 +39,9 @@ importFrom(graphics,polygon)
 importFrom(graphics,segments)
 importFrom(graphics,text)
 importFrom(phytools,phyl.RMA)
+importFrom(rethinking,HPDI)
+importFrom(rethinking,extract.samples)
+importFrom(rethinking,precis)
 importFrom(smatr,sma)
 importFrom(stats,dbinom)
 importFrom(stats,dchisq)
