Still trying to fix travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: r
-r:
-  - release
-  - devel
 cache: packages
 sudo: false
-r_packages:
+r_binary_packages:
   - ggplot2
   - ape
   - scales
