Try to fix build errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,12 @@ export(expand.dft)
 export(pgls.RMA)
 export(plot_mrb)
 export(scientific_10)
-export(unpack_map2stan)
+import(cowplot)
 import(ggplot2)
+import(latex2exp)
 import(lattice)
 import(scales)
+import(tidyverse)
 import(tools)
 importFrom(graphics,abline)
 importFrom(graphics,barplot)
@@ -39,12 +41,17 @@ importFrom(rethinking,extract.samples)
 importFrom(rethinking,precis)
 importFrom(stats,dbinom)
 importFrom(stats,dchisq)
+importFrom(stats,density)
+importFrom(stats,df)
 importFrom(stats,dnorm)
 importFrom(stats,dpois)
 importFrom(stats,dt)
+importFrom(stats,median)
 importFrom(stats,predict)
 importFrom(stats,pt)
 importFrom(stats,qchisq)
+importFrom(stats,qf)
+importFrom(stats,qnorm)
 importFrom(stats,qt)
 importFrom(stats,rnorm)
 importFrom(stats,terms)
