--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,8 @@ Author: Kevin Middleton
 Description: My miscellaneous functions. Many are designed for
     teaching statistics. Some are extensions to phylogenetic
     comparative methods.
-Version: 0.3
-Date: 2017-04-19
+Version: 0.4
+Date: 2020-01-25
 Depends:
     R (>= 3.3),
     lattice,
@@ -20,7 +20,10 @@ Depends:
 Imports:
     ape,
     phytools,
-    rethinking
+    rethinking,
+    tidyverse,
+    latex2exp,
+    cowplot
 Remotes:
     rmcelreath/rethinking
 Encoding: UTF-8
@@ -41,5 +44,5 @@ Collate:
     'expand.dft.R'
     'pgls.RMA.R'
     'plot_mrb.R'
-    'unpack_map2stan.R'
-RoxygenNote: 6.0.1
+    'Shade_Distributions.R'
+RoxygenNote: 7.0.2
